# todo_app

./: pyproject.toml
VERSION_1/: main.py  pyproject.toml  todo_app_v1.py  todos.json
VERSION_2/: CHANGELOG.md  README.md  main.py  pyproject.toml  todo_app_v1.py  todo_app_v2.py  todos.json
VERSION_2/controllers/: todo_controller.py
VERSION_2/models/: history.py  todo.py  todo_model.py
VERSION_2/src/: exceptions.py
VERSION_2/src/controllers/: todo_controller.py
VERSION_2/src/models/: todo_model.py
VERSION_2/src/version_2/models/: todo_model.py
VERSION_2/src/views/: todo_view.py
VERSION_2/utils/: __init__.py  exporter.py
VERSION_2/views/: todo_view.py
VERSION_3/: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  todos.json
VERSION_3/src/: __init__.py  exceptions.py  exceptions.py,cover
VERSION_3/src/controllers/: todo_controller.py  todo_controller.py,cover
VERSION_3/src/models/: history.py  history.py,cover  todo_model.py  todo_model.py,cover
VERSION_3/src/utils/: __init__.py  __init__.py,cover  exporter.py  exporter.py,cover  importer.py  importer.py,cover
VERSION_3/src/version_3/views/: todo_view.py
VERSION_3/src/views/: todo_view.py  todo_view.py,cover
VERSION_3/tests/: conftest.py  exceptions.py  test_controller.py  test_exporter.py  test_history.py  test_importer.py  test_integration.py  test_model.py  test_view.py
